# mgl

./: .gitignore  CMakeLists.txt  NOTICE  azure-pipelines.yml  build.gradle
src/main/java/com/microsoft/mgl/: NativeLibraryLoader.java
src/main/java/com/microsoft/mgl/pairhmm/: ComparePairHmm.java  MicrosoftPairHmm.java
src/main/java/com/microsoft/mgl/smithwaterman/: CompareSmithWaterman.java  MicrosoftSmithWaterman.java
src/main/native/mgl_pairhmm/: CMakeLists.txt  Context.h  com_microsoft_mgl_pairhmm_MicrosoftPairHmm.cc  com_microsoft_mgl_pairhmm_MicrosoftPairHmm.h  compute_fast_prob.cc  compute_prob_avx.h  compute_prob_avxd.cc  compute_prob_avxf.cc  compute_prob_scalar.cc  compute_prob_scalar.h  cpuid.cc  pairhmm_common.cc  pairhmm_common.h
src/main/native/mgl_sw/: CMakeLists.txt  com_microsoft_mgl_smithwaterman_MicrosoftSmithWaterman.cpp  com_microsoft_mgl_smithwaterman_MicrosoftSmithWaterman.h  cpuid.h  sw.cpp  sw_avx.cpp  sw_avx.h  sw_common.h  sw_scalar.h
src/test/java/com/microsoft/mgl/pairhmm/: ComparePairHmm.java  ComparePairHmmUnitTest.java  MicrosoftPairHmmUnitTest.java
src/test/java/com/microsoft/mgl/smithwaterman/: CompareSmithWaterman.java
